--- a/template.html
+++ b/template.html
@@ -57,14 +57,28 @@
 <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet'>
 
 <style>
-  html { background-color: black; }
-  body { background-color: white; }
+  html, .view body { background-color: black; counter-reset: slideidx; }
+  body, .view section { background-color: white; }
   /* A section is a slide. It's size is 800x600, and this will never change */
-  section {
+  section, .view head > title {
       /* The font from Google */
       font-family: 'Oswald', arial, serif;
       font-size: 40px;
   }
+
+  .view section:after {
+    counter-increment: slideidx;
+    content: counter(slideidx, decimal-leading-zero);
+    position: absolute; bottom: -80px; right: 100px;
+    color: white;
+  }
+
+  .view head > title {
+    color: white;
+    text-align: center;
+    margin: 1em 0 1em 0;
+  }
+
   h1, h2 {
     margin-top: 200px;
     text-align: center;
@@ -109,10 +123,20 @@
      https://developer.mozilla.org/en/CSS/CSS_transitions
      How to use CSS3 Transitions: */
   section {
-      -moz-transition: left 400ms linear 0s;
-      -webkit-transition: left 400ms linear 0s;
-      -ms-transition: left 400ms linear 0s;
-      transition: left 400ms linear 0s;
+    -moz-transition: left 400ms linear 0s;
+    -webkit-transition: left 400ms linear 0s;
+    -ms-transition: left 400ms linear 0s;
+    transition: left 400ms linear 0s;
+  }
+  .view section {
+    transition: none;
+    -moz-transition: none;
+    -webkit-transition: none;
+  }
+
+  .view section[aria-selected] {
+    border: 5px red solid;
+    margin: -155px -205px;
   }
 
   /* Before */
@@ -158,15 +182,43 @@
     margin-left: -400px; margin-top: -300px;
     position: absolute; top: 50%; left: 50%;
     overflow: hidden;
+    display: none;
   }
+  .view body {
+    position: static;
+    margin: 0; padding: 0;
+    width: 100%; height: 100%;
+    display: inline-block;
+    overflow: visible; overflow-x: hidden;
+    /* undo Dz.onresize */
+    transform: none !important;
+    -moz-transform: none !important;
+    -webkit-transform: none !important;
+    -o-transform: none !important;
+    -ms-transform: none !important;
+  }
+  .view head, .view head > title { display: block; }
   section {
     position: absolute;
     pointer-events: none;
     width: 100%; height: 100%;
   }
+  .view section {
+    pointer-events: auto;
+    position: static;
+    width: 800px; height: 800px;
+    margin: -150px -200px;
+    float: left;
+
+    transform: scale(.4);
+    -moz-transform: scale(.4);
+    -webkit-transform: scale(.4);
+    -o-transform: scale(.4);
+    -ms-transform: scale(.4);
+  }
   section[aria-selected] { pointer-events: auto; }
   html { overflow: hidden; }
-  body { display: none; }
+  html.view { overflow: visible; }
   body.loaded { display: block; }
   .incremental {visibility: hidden; }
   .incremental[active] {visibility: visible; }
@@ -190,6 +242,7 @@
     this.onhashchange();
     this.setupTouchEvents();
     this.onresize();
+    this.setupView();
   }
   
   Dz.setupParams = function() {
@@ -234,6 +287,10 @@
       aEvent.preventDefault();
       this.toggleContent();
     }
+    if (aEvent.keyCode == 27) { // esc
+      aEvent.preventDefault();
+      this.goView();
+    }
   }
 
   /* Touch Events */
@@ -265,6 +322,23 @@
         }
       }
     }
+  }
+
+  Dz.setupView = function() {
+    var html     = $("html");
+    var sections = $$("section");
+    var eclick   = function(j) {
+      return function() {
+        if("" == html.className)
+          return;
+
+        html.className = "";
+        Dz.setCursor(j + 1);
+      }
+    }
+
+    for(var i = 0; i < sections.length; ++i)
+      sections[i].addEventListener("click", eclick(i), false);
   }
 
   /* Adapt the size of the slides to the window */
@@ -395,6 +469,11 @@
     var lastIdx = this.slides.length;
     var lastStep = this.slides[lastIdx - 1].$$('.incremental > *').length;
     this.setCursor(lastIdx, lastStep);
+  }
+
+  Dz.goView = function() {
+    $("html").className = "view";
+    $("section[aria-selected]").scrollIntoView(true);
   }
 
   Dz.setSlide = function(aIdx) {
