switch all font sizes to rem
to prepare to 16:9 change

--- a/template.html
+++ b/template.html
@@ -107,7 +107,7 @@
   }
 
   section, .view head > title {
-      font-size: 30px;
+      font-size: 2rem;
   }
 
   .view section:after {
@@ -126,7 +126,7 @@
   h1 {
     margin: 120px 0 30px 0;
     text-align: center;
-    font-size: 80px;
+    font-size: 5rem;
   }
 
   h2 {
@@ -140,7 +140,7 @@
 
   pre {
     overflow: hidden;
-    font-size: 20px;
+    font-size: 1.25rem;
     margin: 0 75px 0 75px;
     padding: 10px;
     border: 1px solid;
@@ -165,12 +165,12 @@
 
   p {
     margin: 75px 75px 0 75px;
-    font-size: 50px;
+    font-size: 3rem;
   }
 
   table {
     margin: auto;
-    font-size:40px;
+    font-size:2.5rem;
     text-align: center;
   }
 
@@ -178,7 +178,7 @@
     height: 100%;
     background-color: black;
     color: white;
-    font-size: 60px;
+    font-size: 3.75rem;
     padding: 50px;
   }
   blockquote:before {
@@ -203,7 +203,7 @@
   }
   figcaption {
     margin: 70px;
-    font-size: 50px;
+    font-size: 3rem;
   }
 
   header {
@@ -278,6 +278,9 @@
 <style>
   * { margin: 0; padding: 0; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
   [role="note"] { display: none; }
+  html {
+    font-size: 16px;
+  }
   body {
     width: 800px; height: 600px;
     margin-left: -400px; margin-top: -300px;
