first, pretty lame, take on 16:9 slides

--- a/template.html
+++ b/template.html
@@ -351,6 +351,24 @@
   }
   .view header { display: none; }
   .view footer { display: none; }
+
+/*
+   **************************************
+   Uncomment the following for 16:9 slides
+   **************************************
+
+  html { font-size: 12px; }
+  body { height: 450px; margin-top: -225px; }
+  .view section {
+    height: 450px;
+    margin: -140px -200px;
+    transform: scale(.3);
+    -moz-transform: scale(.3);
+    -webkit-transform: scale(.3);
+    -o-transform: scale(.3);
+    -ms-transform: scale(.3);
+  }
+*/
 </style>
 
 <script>
